Fixed logos and layout bugs

--- a/_sass/sections/_clients.scss
+++ b/_sass/sections/_clients.scss
@@ -1,5 +1,6 @@
 .clients {
 	padding-bottom: 40px;
+	background: #fff;	
 	p {
 		&:first-child {
 			margin-top: 0;
@@ -9,7 +10,6 @@
 			
 		}
 	}
-	background: #eaeaea;	
 	@include heading($blue);  
 	img {
 		background-color: white;
