--- a/_sass/sections/_skills.scss
+++ b/_sass/sections/_skills.scss
@@ -1,5 +1,5 @@
 .skills {
-		background:  #fff;
+		background:  #eaeaea;
 		padding-bottom: 40px;
 		@include heading(darken($blue,8%));
 		ul {
